# ArchitectureAndDesignPatterns_HW10_MicroserviceArchitecture

./: CMakeLists.txt
source/: ArchitectureAndDesignPatterns_HW10_MicroserviceArchitecture.cpp  ArchitectureAndDesignPatterns_HW10_MicroserviceArchitecture.hpp  a.bat  cAuthServer.cpp  cAuthServer.hpp  cGameId.hpp  cGameOperation.cpp  cGameOperation.hpp  cGameParticipationRequest.cpp  cGameParticipationRequest.hpp  cGameServer.cpp  cGameServer.hpp  cListOfSpaceBattleParticipantas.cpp  cListOfSpaceBattleParticipantas.hpp  cMessage.cpp  cMessage.cpp.bak  cMessage.hpp  cMessage.hpp.bak  cRequestAccessToGame.cpp  cRequestAccessToGame.hpp  cRequestSpaceBattleOrganisation.cpp  cRequestSpaceBattleOrganisation.hpp  cSpaceBattle.cpp  cSpaceBattle.hpp  cUser.cpp  cUser.hpp  ёGameParticipationRequest.cpp  ёGameParticipationRequest.hpp
source/tests/: test_ArchitectureAndDesignPatterns_HW10_MicroserviceArchitecture.cpp  test_cAuthServer.cpp  test_cGameOperation.cpp  test_cGameParticipationRequest.cpp  test_cGameServer.cpp  test_cListOfSpaceBattleParticipantas.cpp  test_cMessage.cpp  test_cRequestAccessToGame.cpp  test_cRequestSpaceBattleOrganisation.cpp  test_cSpaceBattle.cpp  test_cUser.cpp  test_ёGameParticipationRequest.cpp
